--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,11 @@
 <div id='links'>
   <!-- Your html here -->
+  <h1>shortened links</h1>
+  <form name="shortenForm" ng-submit='addLink()' novalidate>
+    <input type='url' name='shortUrl' ng-model='url' required>
+    <p ng-show='shortenForm.shortUrl.$invalid || shortenForm.shortUrl.$pristine'>Please input valid URL: 'http://www.url.com'</p>
+    <div> {{url}} </div>
+    <button type='submit' ng-disabled='shortenForm.$invalid'>shorten</button>
+  </form>
+  <a href="#/shorten">Shorten View</a>
 </div>
