--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,9 +1,13 @@
 <div id='signin'>
   <h1>signin</h1>
   <form name="signinForm" ng-submit='signin()'>
-    <input type='text'ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signin</button>
+    <label> Username </label>
+    <input type='text' name='username' ng-model='user.username' ng-minlength="3" ng-maxlength="8" required>
+    <p ng-show="signinForm.username.$error.minlength">Username is too short.</p>
+    <p ng-show="signinForm.username.$error.maxlength">Username is too long.</p>
+    <label> Password </label>
+    <input type="password" name='password' ng-model='user.password' required>
+    <button ng-disabled="signinForm.$invalid">signin</button>
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
