--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,9 +1,13 @@
 <div id='signup'>
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signup</button>
+    <label> Username </label>
+    <input type='text' name='username' ng-model='user.username' ng-minlength="3" ng-maxlength="8" required>
+    <p ng-show="signupForm.username.$error.minlength">Username is too short.</p>
+    <p ng-show="signupForm.username.$error.maxlength">Username is too long.</p>
+    <label> Password </label>
+    <input type="password" name='password' ng-model='user.password' required>
+    <button ng-disabled="signupForm.$invalid">Sign Up</button>
   </form>
   <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
