--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <h1>Shortly</h1>
+    <a href="#/shorten">Shortens View</a></br>
+    <a href="#/links">Links View</a>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="lib/angular-ui-router.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 
     <script src="app/auth/auth.js"></script>
     <script src="app/links/links.js"></script>
