--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,6 +1,6 @@
 <div id='signup'>
   <h1>signup</h1>
-  <form name="signupForm" ng-submit='signup()'>
+  <form name="signupForm" ng-submit='signup()' novalidate>
     <label> Username </label>
     <input type='text' name='username' ng-model='user.username' ng-minlength="3" ng-maxlength="8" required>
     <p ng-show="signupForm.username.$error.minlength">Username is too short.</p>
