--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -2,12 +2,20 @@
   <!-- Your html here -->
   <h1>Shortened Links</h1>
   Search: <input ng-model="urlText">
-
-  <table id="searchUrls">
-  <tr><th>Code</th><th>Url</th></tr>
-  <tr ng-repeat="url in data.links | orderBy:'visits': true |filter:urlText">
-    <td>{{ url.code }}</td>
-    <td>{{ url.url }}</td>
-  </tr>
-</table>
+  </br>
+  <div class="table-responsive col-md-4">
+    <table id="searchUrls" class="table table-striped table-bordered">
+      <thead>
+        <tr><th>Code</th><th>Url</th></tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="url in data.links | orderBy:'visits': true |filter:urlText">
+        <td>{{ url.url }}</td>
+        <td><a href = {{url.base_url}}/api/links/{{url.code}}>
+          {{ url.base_url + '/' + url.code}}
+        </a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
